# live-shuffler

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml
.claude/rules/: testing.md
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
architecture/: index.html
backend/: .dockerignore  Dockerfile  conftest.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/metrics/: chill.yml  dance.yml  dnb.yml  dubstep.yml  funk.yml  hebrew.yml  hiphop.yml  house.yml  hype.yml  jazz.yml  jungle.yml  metal.yml  non_english.yml  pop.yml  rap.yml  retro.yml
backend/app/routers/: auth.py  queue.py  refine.py  spotify.py  suggestions.py
backend/app/services/: metadata.py  queue.py  reccobeats.py  score_cache.py  scoring.py  spotify.py  suggestions.py  tracks.py
backend/tests/e2e/: conftest.py  test_auth_flow.py  test_health.py  test_queue_flow.py
backend/tests/unit/services/: test_graduated_scoring.py  test_queue.py  test_rerank.py  test_scoring.py  test_suggestions.py
contributing/: index.html
docs/: architecture.md  contributing.md  getting-started.md  index.md  metrics.md
frontend/: Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
getting-started/: index.html
metrics/: index.html
search/: search_index.json
(+23 files in other folders)
